--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,8 @@
 @import './variables';
 
 :focus {
-  outline: invert($primaryColor) solid 1px;
+  outline: $primaryColor solid 1px;
+  outline-offset: 0;
 }
 
 html {
@@ -21,44 +22,6 @@ body {
 
 a {
   color: inherit;
-}
-
-img {
-  max-width: 100%;
-}
-
-h1 {
-  font-size: 4rem;
-  margin-bottom: 1em;
-  margin-top: 0;
-  @media (min-width: 768px) {
-    font-size: 5rem;
-  }
-  @media (min-width: 1700px) {
-    font-size: 6rem;
-  }
-}
-
-h2 {
-  font-size: 3.5rem;
-  margin-bottom: 1em;
-  margin-top: 0;
-  @media (min-width: 768px) {
-    font-size: 4rem;
-  }
-  @media (min-width: 1700px) {
-    font-size: 5rem;
-  }
-}
-
-p {
-  margin-top: 0;
-  max-width: 70rem;
-  font-size: 2.4rem;
-  font-weight: 100;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  margin: 0 auto 2rem;
 }
 
 ::placeholder {
