--- a/src/styles/input.module.scss
+++ b/src/styles/input.module.scss
@@ -1,15 +1,15 @@
 @import './variables';
 
 .rootInput {
-  display: inline-block;
   padding: 0 0.75em;
   line-height: 2;
-  border: 0.1rem solid $darkGrey;
+  border: 0.1rem solid $grey;
+  transition: all 0.2s ease-in-out;
 }
 
 .root {
-  display: inline-block;
   position: relative;
+  display: inline-flex;
 
   .loadingIcon {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke="currentColor" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-ripple" style="background: none;"><circle cx="50" cy="50" r="23.3941" fill="none" stroke-width="3"><animate attributeName="r" calcMode="spline" values="0;30" keyTimes="0;1" dur="1.6" keySplines="0 0.2 0.8 1" begin="-0.8s" repeatCount="indefinite"></animate><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="1.6" keySplines="0.2 0 0.8 1" begin="-0.8s" repeatCount="indefinite"></animate></circle><circle cx="50" cy="50" r="7.96641" fill="none" stroke-width="3"><animate attributeName="r" calcMode="spline" values="0;30" keyTimes="0;1" dur="1.6" keySplines="0 0.2 0.8 1" begin="0s" repeatCount="indefinite"></animate><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="1.6" keySplines="0.2 0 0.8 1" begin="0s" repeatCount="indefinite"></animate></circle></svg>');
@@ -26,12 +26,15 @@
 
   input {
     @extend .rootInput;
+    flex-grow: 1;
     background: #fff;
-    border-radius: 0.4rem;
+    // border-radius: 0.4rem;
     padding-right: 0;
-    width: 20rem;
     &:focus {
       border-color: $primaryColor;
+    }
+    &:hover {
+      border: 0.1rem solid $darkGrey;
     }
     &[disabled] {
       cursor: not-allowed;
@@ -45,6 +48,13 @@
 
   &.loading input {
     padding-right: 2em;
+  }
+}
+
+.inline {
+  display: inline-block;
+  input {
+    display: inline-block;
   }
 }
 
@@ -67,10 +77,11 @@
 
 .tabBefore {
   @extend .rootInput;
+  display: inline-block;
   background: $lightGrey;
   border-right: 0;
-  border-top-left-radius: 0.4rem;
-  border-bottom-left-radius: 0.4rem;
+  // border-top-left-radius: 0.4rem;
+  // border-bottom-left-radius: 0.4rem;
   & ~ input {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
@@ -79,11 +90,11 @@
 
 .tabAfter {
   @extend .rootInput;
+  display: inline-block;
   background: $lightGrey;
   border-left: 0;
-  border-top-right-radius: 0.4rem;
-  border-bottom-right-radius: 0.4rem;
-  float: right;
+  // border-top-right-radius: 0.4rem;
+  // border-bottom-right-radius: 0.4rem;
   & ~ input {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
