--- a/src/styles/select.module.scss
+++ b/src/styles/select.module.scss
@@ -2,7 +2,7 @@
 
 .root {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
 }
 
 .base {
@@ -10,7 +10,8 @@
   position: relative;
   padding: 0 0.75em;
   padding-right: 2.5rem;
-  border-radius: 0.4rem;
+  flex-grow: 1;
+  // border-radius: 0.4rem;
   line-height: 2;
   border: 0.1rem solid $darkGrey;
   min-height: 2em;
@@ -43,6 +44,7 @@
   box-shadow: none;
   border: 0;
   display: inline-block;
+  margin: 0 0.5rem;
 }
 
 .noItems .search:empty:before {
@@ -65,6 +67,7 @@
   animation: selectReveal .2s ease-in-out;
   animation-fill-mode: both;
   animation-play-state: running;
+  z-index: $zIndexSuper;
 
   &:empty:before{
     content: 'No results';
