--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -12,7 +12,7 @@
   display: inline-block;
   box-shadow: 0 0 0.5rem rgba(black, 0.1);
   background: #fff;
-  padding: 0 0.5rem;
+  padding: 0.1em 0.5rem;
   height: 3rem;
   min-width: 3rem;
   cursor: pointer;
