--- a/src/components/Radios/Radios.module.scss
+++ b/src/components/Radios/Radios.module.scss
@@ -37,7 +37,6 @@
 
 .buttonStyle {
   background: $lightGrey;
-  border-radius: 0.4rem;
   border: 0.1rem solid $grey;
   overflow: hidden;
   line-height: 0;
@@ -46,7 +45,7 @@
   & > label {
     user-select: none;
     display: inline-block;
-    padding: 0 1rem;
+    padding: 0.1em 2rem 0;
     border-right: 0.1rem solid $grey;
     line-height: 2;
     height: 2em;
