--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -17,6 +17,7 @@
   width: 20rem;
   user-select: none;
   cursor: pointer;
+  font-weight: 200;
   &:hover {
     border: 0.1rem solid $darkGrey;
   }
@@ -48,7 +49,7 @@
   min-width: 1rem;
   min-height: 2.5rem;
   display: inline-block;
-  margin: 0 0.5rem;
+  margin: 0;
   line-height: 1;
   white-space: nowrap;
   vertical-align: bottom;
@@ -56,6 +57,8 @@
 
 .noItems .search:empty:before {
     content: attr(placeholder);
+    margin-top: 0.1em;
+    display: inline-block;
     color: #858585;
 }
 
@@ -65,6 +68,7 @@
   position: absolute;
   display: inline-block;
   top: calc(100% + .5rem);
+  padding-top: 0.1em;
   left: 0;
   max-height: 14em;
   overflow-y: auto;
