--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables';
 
-$cellPadding: 1.75rem 1.5rem;
+$cellPadding: calc(1.75rem + 0.1em) 1.5rem calc(1.75rem - 0.1em);
 
 .root {
   overflow-x: auto;
